Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -192,8 +192,8 @@
     }
    ],
    "source": [
-    "name = \"Ceo\" # 'CEO'\n",
-    "name.upper()"
+    "\"Ceo\" # 'CEO'\n",
+    "\"\".upper()"
    ]
   },
   {
