--- a/index.ipynb
+++ b/index.ipynb
@@ -205,23 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-9-977d9a66aa21>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-9-977d9a66aa21>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    email.endswith('.com' OR '.co')\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
     }
    ],
    "source": [
     "email = \"art.vandelay@vandelay.co\" # False\n",
-    "email.endswith('.com' OR '')"
+    "email.endswith('.com' OR '.co')"
    ]
   },
   {
