--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
@@ -241,17 +241,17 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.com'"
+       "'www.vamdaley.com'"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "'vandelay.com' # 'www.vandelay.com'\n",
-    "'www.' + 'vamdaley'"
+    "'www.' + 'vandaley.com'"
    ]
   },
   {
