--- a/index.ipynb
+++ b/index.ipynb
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -241,10 +241,10 @@
     {
      "data": {
       "text/plain": [
-       "'www.vamdaley.com'"
+       "'www.vandaley.com'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
